feat: me handler
